Added adjacency list.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel='stylesheet' href='./styles.css'>
 </head>
 <body>
-  <script src='./knights.js' defer></script>
+  <script src='./knights.js'></script>
+  <h1>Knights Travails</h1>
 </body>
 </html>
