--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
   <script src='./knights.js'></script>
   <h1>Knights Travails</h1>
+  <div class='chessboard'>
+
+  </div>
 </body>
 </html>
