--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Knights Travails</title>
   <link rel='stylesheet' href='./styles.css'>
+  <script src='./knights.js' defer></script>
 </head>
 <body>
-  <script src='./knights.js'></script>
-  <h1>Knights Travails</h1>
-  <div class='chessboard'>
-
+  <div>
+    <h1 class="title">Knights Travails</h1>
+    <div>
+      <img src="./knight.jpg" class="knightJpg" alt="Picture of a knight riding a horse">
+      <div class="instructions">
+        <p>Welcome to Knight's Travails!</p>
+        <p>The knight will find the shortest path to its destination.</p>
+        <p>Click anywhere on the chessboard to begin the knight's adventure!</p>
+      </div>
+    </div>
   </div>
+  <div class="chessboard"></div>
+
 </body>
 </html>
